Add RSpec testing framework and update transaction logic
- Introduced RSpec for testing by adding necessary configuration files and dependencies in Gemfile.
- Enhanced `TransactionsController` to validate parameters and ensure sufficient wallet balances before processing transactions.
- Updated `User` model to establish a relationship with `Wallet`.
- Modified `Wallet` model to set default balance and changed balance data type to float.
- Created model and request specs for `User`, `Transaction`, and `Wallet` to ensure proper functionality and validations.
- Added tests for currency conversion service to handle API interactions and error scenarios.

--- a/test/fixtures/wallets.yml
+++ b/test/fixtures/wallets.yml
@@ -9,7 +9,7 @@
 # Table name: wallets
 #
 #  id         :bigint           not null, primary key
-#  balance    :decimal(10, 2)   not null
+#  balance    :float            not null
 #  currency   :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
